[gd_scene load_steps=21 format=3 uid="uid://bai3booibx7cy"]

[ext_resource type="Script" uid="uid://cm4vhqqyonlrd" path="res://scripts/game_3/game_3_v3.gd" id="1_r1ad8"]
[ext_resource type="FontFile" uid="uid://b2lderbh3o76w" path="res://assets/fuentes/AtkinsonHyperlegible-Bold.ttf" id="2_h40rj"]
[ext_resource type="PackedScene" uid="uid://bex2m6ghs62t7" path="res://scenes/game_test_3.tscn" id="2_ojoub"]
[ext_resource type="Texture2D" uid="uid://d0vxcs6jpwl8e" path="res://assets/texturasgenericas/grey_panel.png" id="2_y55uh"]
[ext_resource type="Script" uid="uid://ur1qsdanhpwo" path="res://scripts/game_3/game_3_v3_numeros.gd" id="4_1uv66"]
[ext_resource type="Texture2D" uid="uid://5el60unpnqtf" path="res://assets/botones_textura/red_button01.png" id="5_w46gi"]
[ext_resource type="Texture2D" uid="uid://cake3pvtyxtid" path="res://assets/botones_textura/red_button02.png" id="6_khyur"]
[ext_resource type="AudioStream" uid="uid://b0bu315iwj81h" path="res://assets/sfxfeedback/Signal Positive Ceramic C.wav" id="7_gbms7"]
[ext_resource type="AudioStream" uid="uid://c54ocl20jhrqk" path="res://assets/sfxfeedback/Signal Negative Space B.wav" id="8_w46gi"]
[ext_resource type="Texture2D" uid="uid://bdg2pnye1en5f" path="res://assets/texturasgenericas/red_panel.png" id="9_w46gi"]
[ext_resource type="PackedScene" uid="uid://xru2yuflnnye" path="res://scenes/heart_counter/heart_counter.tscn" id="10_khyur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w46gi"]
bg_color = Color(0.467738, 0.467738, 0.467738, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khyur"]
bg_color = Color(0.229423, 0.833621, 0.502636, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ojoub"]
font = ExtResource("2_h40rj")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yw6dd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gbms7"]
texture = ExtResource("5_w46gi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w46gi"]
texture = ExtResource("6_khyur")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_khyur"]
texture = ExtResource("5_w46gi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r1ad8"]
texture = ExtResource("9_w46gi")

[sub_resource type="LabelSettings" id="LabelSettings_1uv66"]
font = ExtResource("2_h40rj")
font_size = 70

[node name="game_3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1ad8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -129.0
offset_right = 93.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y55uh")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.199
anchor_right = 0.491
anchor_bottom = 0.199
offset_left = -200.52
offset_top = -31.72
offset_right = 200.48
offset_bottom = 32.28
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_w46gi")
theme_override_styles/fill = SubResource("StyleBoxFlat_khyur")
value = 20.0
show_percentage = false

[node name="game_test3" parent="." instance=ExtResource("2_ojoub")]
layout_mode = 1
script = ExtResource("4_1uv66")

[node name="LabelCalculo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.136
anchor_right = 0.5
anchor_bottom = 0.136
offset_left = -317.0
offset_top = -69.08
offset_right = 317.0
offset_bottom = 68.92
grow_horizontal = 2
grow_vertical = 2
text = "Agrupa numeros para que sumen:"
label_settings = SubResource("LabelSettings_ojoub")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.931
anchor_right = 0.506
anchor_bottom = 0.931
offset_left = -146.32
offset_top = -60.6801
offset_right = 145.68
offset_bottom = 61.3199
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_h40rj")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxTexture_yw6dd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gbms7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w46gi")
theme_override_styles/normal = SubResource("StyleBoxTexture_khyur")
text = "Volver"

[node name="positivo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_gbms7")

[node name="negativo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_w46gi")

[node name="pantallaresumen" type="Node" parent="."]

[node name="backgroundResumen" type="TextureRect" parent="pantallaresumen"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -156.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y55uh")

[node name="textoResumen" type="Label" parent="pantallaresumen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -128.5
offset_right = 200.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_h40rj")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_r1ad8")
text = "Puntaje:"
label_settings = SubResource("LabelSettings_1uv66")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartCounter" parent="." instance=ExtResource("10_khyur")]
position = Vector2(605, 258)

[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
